# Universal-Extractor-v3

./: Dockerfile  LICENSE  README.md  README_PLUGINS.md  config.json  extractor.db  fingerprints.json  init_project.py  main.py  plugins_registry.json  pyproject.toml  registry.py  requirements.txt  signatures.json  test_all.py  tools_updater.py  updates.json
Universal_Extractor/decoders/: xor_decoder.py
ai/: fingerprint.py  train_ai.py
core/: conflict_manager.py  container.py  crypto_discovery.py  database.py  error_assistant.py  i18n.py  key_scraper.py  logger.py  plugin_loader.py  preview.py  processor.py  progress.py  scanner.py  validator.py  virtual_fs.py
decoders/: audio_utils.py  bres_decoder.py  cocos2dx.py  cryengine.py  deflate.py  etc1.py  gameloft.py  godot.py  image_helper.py  konami.py  lz4_decoder.py  lzss.py  mc4_gameloft.py  psarc.py  renpy.py  rpgmaker.py  source_engine.py  struct_parser.py  unity.py  unreal_pak.py  xor_decoder.py  yaz0.py
engines/: base.py
inputs/swf/: 1033965491.sobfs.swf  1312559143.sobfs.swf  1359614032.sobfs.swf  1562054754.sobfs.swf  251137640.sobfs.swf  26152486.sobfs.swf  2778991392.sobfs.swf  2932738866.sobfs.swf  30871088.sobfs.swf  3179940845.sobfs.swf  3193244667.sobfs.swf  3494710360.sobfs.swf  3619753182.sobfs.swf  3621326046.sobfs.swf  3629518052.sobfs.swf  3844279607.sobfs.swf  4048489827.sobfs.swf  4078505406.sobfs.swf  4088139211.sobfs.swf  4278521320.sobfs.swf  492637901.sobfs.swf  66522518.sobfs.swf  766578501.sobfs.swf  770510667.sobfs.swf  (+1 more)
lang/: ar.json  en.json
plugins/: example_extractor.py
tests/: test_basic.py
universal_extractor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
web_app/: app.py
(+3 files in other folders)
